force-app/main/default/objects/Contact/fields/Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address__c</fullName>
    <formula>Account.BillingStreet &amp; &quot;, &quot; &amp; 
IF(
    NOT(ISBLANK(Account.BillingCity)), Account.BillingCity &amp; &quot;, &quot;, &quot;&quot;
) &amp;
IF(
    NOT(ISBLANK(Account.BillingState)), Account.BillingState &amp; &quot; &quot;, &quot;&quot;
) &amp;
Account.BillingPostalCode &amp; &quot;, &quot; &amp; 
Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Address</label>
    <type>Text</type>
</CustomField>