force-app/main/default/objects/Contact/fields/CCEmail__c.field-meta.xml
<CustomField>
    <fullName>CCEmail__c</fullName>
    <label>CC Email</label>
    <type>Email</type>
</CustomField>