force-app/main/default/objects/Contact/fields/Contact_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_Billing_City__c</fullName>
    <formula>Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Billing City</label>
    <type>Text</type>
</CustomField>