force-app/main/default/objects/Contact/fields/Contact_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Billing_Country__c</fullName>
    <formula>Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Billing  Country</label>
    <type>Text</type>
</CustomField>