force-app/main/default/objects/Contact/fields/Contact_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_Billing_State__c</fullName>
    <formula>Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Billing state</label>
    <type>Text</type>
</CustomField>