force-app/main/default/objects/Contact/fields/Contact_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Contact_Billing_Street__c</fullName>
    <formula>Account.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Billing Street</label>
    <type>Text</type>
</CustomField>