force-app/main/default/objects/Contact/fields/Contact_Billing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Billing_Zip_Code__c</fullName>
    <formula>Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Billing Zip Code</label>
    <type>Text</type>
</CustomField>