force-app/main/default/objects/Contact/fields/secondaryEmail__c.field-meta.xml
<CustomField>
    <fullName>secondaryEmail__c</fullName>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>